Improvements for images

--- a/templates/shortcodes/resize.html
+++ b/templates/shortcodes/resize.html
@@ -1,2 +1,2 @@
-{% set img = resize_image(path=path, width=width) %}
+{% set img = resize_image(path=path, width=width, op = fit) %}
 <img src="{{ img.url }}" alt="{{ alt }}">
